        This is the important reason.
      - Second is that some people don't like sessionfiles and prefer full logs as
        it was in the past. Good ol' times.
  - host_runtime_info()
    - added --nostoragestatus to -S runtime -s health to avoid a double alarm
      when also doing a check with -S runtime -s storagehealth for the same
      host.
  - dc_runtime_info()
    - changed 
      if (($subselect eq "listcluster") || ($subselect eq "all"))
      to
      if (($subselect =~ m/listcluster.*$/) || ($subselect eq "all"))
      This is to avoid unnecessary typos because it covers listcluster and listclusters ;-)
  - datastore_volumes_info()
    -  Heavily reworked lot of the logical structure. There were too much changes
       changes after changes which lead to bugs. Now it is cleaned up.
  - cluster_list_vm_volumes_info()
    - Seperate module now
  - cluster_cpu_info()
    - Seperate module now but still not working.

- 1 Jul 2014 M.Fuerstenau version 0.9.16a
  - Unfortunately published some modules containing debugging outpu. Fixed.
    - host_disk_io_info.pm
    - process_perfdata.pm
    - vm_disk_io_info.pm

- 20 Jul 2014 M.Fuerstenau version 0.9.17
  - Removing the last multiline character (\n or <br>) was moved
    from several subroutines to the main exit in check_vmware_esx.pl. 
    This was based this was implemented based on a proposal of Dietmar Eberth
    Affected subroutines:
    - vm_runtime_info()
    - host_storage_info()
    - host_runtime_info()
    - dc_runtime_info()
    -datastore_volumes_info()
  - Fixed a bug on line 139 and 172. Thanks for fixing it to Dietmar Eberth.
    - Instead of 
    
      if ( $state >= 0 )
         {
         $alertcnt++;
         }
        
      it must be:

      if ( $alertcnt > 0 )
         {
         $alertcnt++;
         }

  - Fixed a bug on line 139 and 172. Thanks for fixing it to Dietmar Eberth.
  - If only one volume is selected we have a better output now. Also thanks
    to Dietmar Eberth.